--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "playwright-crawlee",
+  "name": "crawlee-playwright",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "npx vite-node src/main.ts",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
     "typescript": "~5.6.2",
     "vite": "^5.4.10"
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
+  "dependencies": {
+    "crawlee": "^3.11.5",
+    "playwright": "^1.48.2"
   }
 }
